2010-01-11  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by Ariya Hidayat.

        [Qt] Enable JIT and YARR_JIT if (CPU(X86_64) && OS(LINUX) && GCC_VERSION >= 40100)

        * wtf/Platform.h:

2010-01-11  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=33481
        Uninitialized data members in ArrayStorage
        
        SunSpider reports no change.

        * runtime/JSArray.cpp:
        (JSC::JSArray::JSArray): Initialize missing data members in the two cases
        where we don't use fastZeroedMalloc, so it doesn't happen automatically.

2010-01-11  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=33480
        
        Improve debugging reliability for WTF on Windows.
        Store WTF static library's PDB file into a better location.

        * JavaScriptCore.vcproj/WTF/WTF.vcproj:

2010-01-11  Steve Falkenburg  <sfalken@apple.com>

        Windows build fix.
        Remove extraneous entries from def file causing build warning.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2010-01-10  Kent Hansen  <kent.hansen@nokia.com>

        Reviewed by Darin Adler.

        RegExp.prototype.toString returns "//" for empty regular expressions
        https://bugs.webkit.org/show_bug.cgi?id=33319

        "//" starts a single-line comment, hence "/(?:)/" should be used, according to ECMA.

        * runtime/RegExpPrototype.cpp:
        (JSC::regExpProtoFuncToString):

        * tests/mozilla/ecma_2/RegExp/properties-001.js:
        (AddRegExpCases):
        * tests/mozilla/js1_2/regexp/toString.js:
        Update relevant Mozilla tests (Mozilla has had this behavior since November 2003).

2010-01-10  Darin Adler  <darin@apple.com>

        * tests/mozilla/ecma/Array/15.4.1.1.js: Added property allow-tabs.
        * tests/mozilla/ecma/Array/15.4.1.2.js: Added property allow-tabs.